--- a/styles/main.css
+++ b/styles/main.css
@@ -10,7 +10,7 @@ body {
   height: 100vh;
   display: grid;
   place-items: center;
-  background-color: aqua;
+  background-color: rgb(209, 231, 231);
 }
 
 .page-wrapper {
@@ -27,7 +27,7 @@ h1 {
 }
 
 p {
-  color: rgb(192, 84, 208);
+  color: rgb(41, 13, 45);
   font-family: "Comfortaa", cursive;
   font-size: 1.5em;
   margin: 15px 0;
